feat(libraries): remove install lifecycle
